# project-nautilus

./: .gitignore  README.md
.github/: dependabot.yml
bootstrap/: README.md
constructs/: README.md
constructs/pulumi/python/: pyproject.toml
constructs/pulumi/python/.github/workflows/: ci.yml
constructs/pulumi/python/nautilus_infra_pulumi/: __init__.py
constructs/pulumi/python/nautilus_infra_pulumi/components/: __init__.py  compute.py  database.py  network.py
constructs/pulumi/python/nautilus_infra_pulumi/policy/: __init__.py  tagging.py
constructs/pulumi/python/tests/: test_components.py
constructs/python/: README.md  pyproject.toml
constructs/python/.github/workflows/: ci.yml
constructs/python/k1cka5h_infra/: __init__.py
constructs/python/k1cka5h_infra/constructs/: __init__.py  compute.py  database.py  network.py
constructs/python/myorg_infra/: __init__.py
constructs/python/myorg_infra/constructs/: base_stack.py  compute.py  database.py  network.py
constructs/python/nautilus_infra/: __init__.py
constructs/python/nautilus_infra/constructs/: compute.py  database.py  network.py
constructs/python/nautilus_infra/policy/: tagging.py
constructs/python/tests/: test_constructs.py
docs/: docs.html  index.html
examples/: README.md
policy/: README.md  deny_budget_violations.rego  deny_budget_violations_test.rego  deny_deletions_outside_dev.rego  deny_deletions_outside_dev_test.rego  deny_missing_required_tags.rego  deny_missing_required_tags_test.rego  deny_network_outside_dev.rego  deny_network_outside_dev_test.rego  deny_permission_changes_outside_dev.rego  deny_permission_changes_outside_dev_test.rego  deny_public_resources.rego  deny_public_resources_test.rego
reusable-workflows/: README.md
setup/: README.md  nautilus.sh
tf-azure/: README.md
tf-modules/: CHANGELOG.md  README.md
wiki/: architecture-overview.md  bootstrap.md  developer-guide.md  home.md  platform-module-maintenance.md  platform-product-maintenance.md  (+1 more)
(+160 files in other folders)
